--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ app.listen(3000, () => {
         <li>Installez Express : <code>npm install express</code></li>
         <li>Ajoutez le code ci-dessus dans un fichier <code>index.js</code></li>
         <li>Lancez le serveur avec <code>node index.js</code></li>
-        <li>Ouvrez <code>http://localhost:3000</code> → vous devriez voir <b>Bonjour depuis Express moderne 🚀</b></li>
+        <li>Ouvrez <code>http://localhost:3000</code> → vous devriez voir <b>Bonjour depuis Express moderne </b></li>
       </ol>
     </div>
 
